--- a/app/styles/effects.scss
+++ b/app/styles/effects.scss
@@ -1,11 +1,3 @@
-// .fadeInImage {
-//   animation: fadeIn 2s;
-// }
-
-// .fadeInText {
-//   animation: fadeIn 1.5s ease-out;
-// }
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -26,10 +18,16 @@
 
 .fadeIn {
   animation: fadeIn 2s;
+  animation-fill-mode: none;
 }
 
 .fadeOut {
   animation: fadeOut 2s;
+  animation-fill-mode: forwards;
+}
+
+.fadeOutEnd {
+  animation: fadeOut 2s 1;
 }
 
 .takeDamage::-webkit-progress-value {
