--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,9 +1,9 @@
-@import "normalize.css";
-@import "skeleton.css";
-@import "effects.scss";
+@import 'normalize.css';
+@import 'skeleton.css';
+@import 'effects.scss';
 
 header {
-  display: flex;
+  // display: flex;
   justify-content: space-between;
   padding-left: 1vw;
   padding: 1vw 0 1vw 1vw;
@@ -19,6 +19,7 @@ header {
   nav {
     display: flex;
 
+    justify-content: right;
     margin-right: 20px;
   }
 
@@ -36,4 +37,10 @@ header {
   width: 125px !important;
   box-shadow: 0px 3px 2px 0px rgba(190, 190, 190, 0.5) !important;
   -webkit-box-shadow: 0px 3px 2px 0px rgba(190, 190, 190, 0.5) !important;
+}
+
+.foo {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
