--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -1,1 +1,19 @@
 $color-blue: blue;
+
+// Title
+$color-title: #e08e79;
+
+// End
+$dark-bg: #000;
+
+// Stats
+$stats-border: #eee;
+$progress-bg-color: #333;
+$progress-main-color: green;
+$damage-color: red;
+
+// Text
+$text-bright: #fff;
+
+// Book
+$book-page-color: #ccb897;
