--- a/app/end/end.scss
+++ b/app/end/end.scss
@@ -8,7 +8,7 @@
   height: 100%;
   width: 100%;
 
-  color: $text-bright;
+  color: $text-brightest;
 
   background-color: $dark-bg;
 }
@@ -59,7 +59,7 @@
     button {
       flex: 40%;
       margin: 5px;
-      color: $text-bright;
+      color: $text-brightest;
     }
   }
 }
