--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -18,7 +18,8 @@ $progress-main-color: #3c998c;
 $damage-color: #cc3c3b;
 
 // Text
-$text-bright: #fff;
+$text-brightest: #fff;
+$text-bright: #eee;
 
 // Link
 // $link-base: #1eaedb; // Skeleton
