--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -3,30 +3,46 @@
 @import 'effects.scss';
 @import './colors.scss';
 
+html {
+  background: rgb(204, 184, 151);
+  background: linear-gradient(
+    90deg,
+    rgba(204, 184, 151, 0.11) 0%,
+    rgba(221, 212, 199, 0.11) 34%,
+    rgba(221, 212, 199, 0.11) 68%,
+    rgba(204, 184, 151, 0.11) 100%
+  );
+}
+
 header {
   position: relative;
   display: flex;
   justify-content: space-between;
-  padding: 0.5vw 0;
   background-color: $header-background;
   box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
+  margin-bottom: 4vh;
   z-index: 100;
 
   > h1,
-  h1 a,
-  h1 a:hover {
+  h1 a {
     color: $title-muted;
     font-size: 1.2em;
-    margin-bottom: 0;
-    margin-left: 1vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    margin-left: 0.5vw;
     letter-spacing: normal;
-    opacity: 0.4;
+    opacity: 0.85;
     align-self: center;
+    text-decoration: none;
+  }
+  h1 a:hover {
+    color: $text-bright;
+    opacity: 1;
     text-decoration: none;
   }
 
   nav {
-    margin-right: 1vw;
+    margin-right: 0.5vw;
     align-self: center;
   }
 
@@ -35,15 +51,13 @@ header {
     text-decoration: none;
     text-transform: lowercase;
     font-size: 0.9em;
-    color: $link-base;
+    color: $link-hover;
 
     &:hover {
-      color: $link-hover;
+      color: $text-bright;
       text-decoration: underline;
     }
   }
-
-  margin-bottom: 2vh;
 }
 
 button {
