--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -25,7 +25,7 @@ $text-bright: #eee;
 // $link-base: #1eaedb; // Skeleton
 // $link-hover: #0fa0ce;
 
-$link-base: #3e6d8d;
+$link-base: $color-primary;
 $link-hover: #68b8ed;
 
 // Book
