Added adversary prompts, weapon choice to 4. Various style tweaks.

--- a/app/error/error.scss
+++ b/app/error/error.scss
@@ -35,11 +35,11 @@
   .tryAgain {
     border-color: $progress-main-color;
     color: white;
-    background-color: $progress-main-color;
+    background-color: $link-base;
     opacity: 0.7;
 
     &:hover {
-      background-color: $progress-main-color;
+      background-color: $link-base;
       opacity: 1;
     }
   }
