--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -12,7 +12,7 @@ $encounter-title: #8c5f4c;
 $dark-bg: #000;
 
 // Stats
-$stats-border: #eee;
+$stats-border: #bbb;
 $progress-bg-color: #eee;
 $progress-main-color: #3c998c;
 $damage-color: #cc3c3b;
